Add basic html structure, and centering

--- a/index.html
+++ b/index.html
@@ -1,14 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Spelling Bee Solver</title>
-</head>
-<body>
-    HELLOW WORDS 
-    
-    <script src="script.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1.0"
+        />
+        <link
+            rel="stylesheet"
+            href="styles.css"
+        />
+        <title>Spelling Bee Solver</title>
+    </head>
+    <body>
+        <h1>SPELLING BEE SOLVER</h1>
+        <input
+            type="text"
+            placeholder="Enter Letters Here"
+        />
+        <button>A</button>
+        <button>Find Words</button>
+
+        <section>
+            <h1>Valid Words:</h1>
+            <dl>
+                <dt>7 letter</dt>
+                <dd>wordasdf</dd>
+                <dd>wordasdf</dd>
+                <dd>wordasdf</dd>
+
+                <dt>6 letter</dt>
+                <dd>wordasf</dd>
+                <dd>wordadf</dd>
+
+                <dt>5 letter</dt>
+                <dd>worda</dd>
+                <dd>worda</dd>
+                <dd>worda</dd>
+            </dl>
+        </section>
+
+        <script src="script.js"></script>
+    </body>
 </html>
