Format basic input fields

--- a/index.html
+++ b/index.html
@@ -14,12 +14,24 @@
     </head>
     <body>
         <h1>SPELLING BEE SOLVER</h1>
-        <input
-            type="text"
-            placeholder="Enter Letters Here"
-        />
-        <button>A</button>
-        <button>Find Words</button>
+
+        <div class="letter-input-container">
+            <input
+                id="letter-input"
+                type="text"
+                placeholder="Enter Letters Here"
+            />
+            <div id="target-input-container">
+                <button class="target-input">A</button>
+                <button class="target-input">C</button>
+                <button class="target-input">T</button>
+                <button class="target-input">T</button>
+                <button class="target-input">T</button>
+                <button class="target-input">T</button>
+                <button class="target-input">T</button>
+            </div>
+            <button id="find-words-btn">Find Words</button>
+        </div>
 
         <section>
             <h1>Valid Words:</h1>
