Format colors, spacing for input

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
                 type="text"
                 placeholder="Enter Letters Here"
             />
+            
             <div id="target-input-container">
+            <p id="target-input-label">Select Target:</p>
                 <button class="target-input">A</button>
                 <button class="target-input">C</button>
                 <button class="target-input">T</button>
