Format uppercase for text input and coloring for selected target

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <button class="target-input">T</button>
                 <button class="target-input">T</button>
                 <button class="target-input">T</button>
-                <button class="target-input">T</button>
+                <button class="target-input target">T</button>
                 <button class="target-input">T</button>
             </div>
             <button id="find-words-btn">Find Words</button>
