--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
 
         <hr />
-
+        <p id="dict">test</p>
         <section>
             <h1>Valid Words:</h1>
             <dl>
