Display descriptive terms for word list headings per word length

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <body>
         <h1>SPELLING BEE SOLVER</h1>
 
-        <form id="inputs-form" autocomplete="off">
+        <form
+            id="inputs-form"
+            autocomplete="off"
+        >
             <div class="letter-input-container">
                 <input
                     id="letter-input"
@@ -74,14 +77,7 @@
         <p id="dict">test</p>
         <section>
             <h1>Valid Words:</h1>
-            <dl id="word-list-display">
-                <dt>6 letter</dt>
-                <dd>wordasf</dd>
-                <dd>wordadf</dd>
-
-                <dt>5 letter</dt>
-                <dd>worda</dd>
-            </dl>
+            <dl id="word-list-display"></dl>
         </section>
 
         <script src="script.js"></script>
