Clear previous display results each search

--- a/index.html
+++ b/index.html
@@ -73,10 +73,12 @@
             </div>
         </form>
 
+        <button id="reset-btn">Reset</button>
+
         <hr />
-        <p id="dict">test</p>
+        <p id="dict">test</p> <!--Using this to check reading in dict-->
         <section>
-            <h1>Valid Words:</h1>
+            <h1 id="word-list-title" class="hidden">Valid Words:</h1>
             <dl id="word-list-display"></dl>
         </section>
 
