Toggle displaying hr line

--- a/index.html
+++ b/index.html
@@ -74,11 +74,21 @@
         </form>
 
         <button id="reset-btn">Reset</button>
+        <p id="dict">test</p>
 
-        <hr />
-        <p id="dict">test</p> <!--Using this to check reading in dict-->
+        <hr
+            id="line-break"
+            class="hidden"
+        />
+    
+        <!--Using this to check reading in dict-->
         <section>
-            <h1 id="word-list-title" class="hidden">Valid Words:</h1>
+            <h1
+                id="word-list-title"
+                class="hidden"
+            >
+                Valid Words:
+            </h1>
             <dl id="word-list-display"></dl>
         </section>
 
