Display target options dynamically based on letters input

--- a/index.html
+++ b/index.html
@@ -28,41 +28,24 @@
 
                 <div id="target-input-container">
                     <p id="target-input-label">Select Target:</p>
-                    <input
-                        type="button"
-                        class="target-input"
-                        value="A"
-                    />
-                    <input
-                        type="button"
-                        class="target-input"
-                        value="A"
-                    />
-                    <input
-                        type="button"
-                        class="target-input"
-                        value="A"
-                    />
-                    <input
-                        type="button"
-                        class="target-input"
-                        value="A"
-                    />
-                    <input
-                        type="button"
-                        class="target-input"
-                        value="A"
-                    />
-                    <input
-                        type="button"
-                        class="target-input target"
-                        value="A"
-                    />
-                    <input
-                        type="button"
-                        class="target-input"
-                        value="A"
-                    />
+                    <div id="target-btn-container">
+                        <input
+                            type="button"
+                            class="target-input"
+                            value="A"
+                        />
+                        <input
+                            type="button"
+                            class="target-input"
+                            value="A"
+                        />
+                        <input
+                            type="button"
+                            class="target-input target"
+                            value="A"
+                        />
+                      
+                    </div>
                 </div>
                 <button
                     type="submit"
@@ -75,13 +58,13 @@
 
         <button id="reset-btn">Reset</button>
         <p id="dict">test</p>
+        <!--Using this to check reading in dict-->
 
         <hr
             id="line-break"
             class="hidden"
         />
-    
-        <!--Using this to check reading in dict-->
+
         <section>
             <h1
                 id="word-list-title"
