--- a/index.html
+++ b/index.html
@@ -27,24 +27,14 @@
                 />
 
                 <div id="target-input-container">
-                    <p id="target-input-label">Select Target:</p>
+                    <p
+                        id="target-input-label"
+                        class="hidden"
+                    >
+                        Select Target:
+                    </p>
                     <div id="target-btn-container">
-                        <input
-                            type="button"
-                            class="target-input"
-                            value="A"
-                        />
-                        <input
-                            type="button"
-                            class="target-input"
-                            value="A"
-                        />
-                        <input
-                            type="button"
-                            class="target-input target"
-                            value="A"
-                        />
-                      
+
                     </div>
                 </div>
                 <button
