--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             >
                 Valid Words:
             </h1>
+            <h3 id="error-message-display" class="hidden"><em>No target was selected</em></h3>
             <dl id="word-list-display"></dl>
         </section>
 
