--- a/index.html
+++ b/index.html
@@ -20,11 +20,14 @@
             autocomplete="off"
         >
             <div class="letter-input-container">
+
+                
                 <input
                     id="letter-input"
                     type="text"
                     placeholder="Enter Letters Here"
                 />
+                <h3 id="input-error-message-display" class="error-message"><em>No target was selected</em></h3>
 
                 <div id="target-input-container">
                     <p
@@ -62,7 +65,7 @@
             >
                 Valid Words:
             </h1>
-            <h3 id="error-message-display" class="hidden"><em>No target was selected</em></h3>
+            <h3 id="target-error-message-display" class="error-message hidden">No target was selected</h3>
             <dl id="word-list-display"></dl>
         </section>
 
