Input error message displaying and clears

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     type="text"
                     placeholder="Enter Letters Here"
                 />
-                <h3 id="input-error-message-display" class="error-message"><em>No target was selected</em></h3>
+                <h3 id="input-error-message-display" class="error-message">Blank</h3>
 
                 <div id="target-input-container">
                     <p
