Fix bug with selecting target cross browsers, playing around with setting scroll height based on elements

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             class="hidden"
         />
 
-        <section>
+        <section id="display">
             <h1
                 id="word-list-title"
                 class="hidden"
